gadgets_scanners/exposure/tests/data/envoy/req.sw.envoy.tls.downstream.verify-client/not_applicable/envoy.json
{
  "static_resources": {
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 10000
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "ingress_http",
                  "route_config": {
                    "name": "local_route",
                    "virtual_hosts": [
                      {
                        "name": "backend",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "service"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.compressor",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor",
                        "response_direction_config": {
                          "common_config": {
                            "min_content_length": 100,
                            "content_type": [
                              "application/json"
                            ]
                          },
                          "disable_on_etag_header": true
                        },
                        "compressor_library": {
                          "name": "text_optimized",
                          "typed_config": {
                            "@type": "type.googleapis.com/envoy.extensions.compression.brotli.compressor.v3.Brotli",
                            "window_bits": 10
                          }
                        }
                      }
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ]
                }
              }
            ],
            "transport_socket": {
              "name": "envoy.transport_sockets.tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "require_client_certificate": true,
                "common_tls_context": {
                  "validation_context": {
                    "trusted_ca": {
                      "filename": "certs/cacert.pem"
                    }
                  },
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "inline_string": "-----BEGIN CERTIFICATE-----\nBLA BLA\n-----END CERTIFICATE-----\n"
                      },
                      "private_key": {
                        "inline_string": "-----BEGIN PRIVATE KEY-----\nBLA BLA\n-----END PRIVATE KEY-----\n"
                      }
                    }
                  ]
                }
              }
            }
          }
        ]
      },
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 9902
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "ingress_http",
                  "route_config": {
                    "name": "local_route",
                    "virtual_hosts": [
                      {
                        "name": "backend",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/stats/prometheus"
                            },
                            "route": {
                              "cluster": "envoy-stats"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.compressor",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor",
                        "response_direction_config": {
                          "common_config": {
                            "min_content_length": 100,
                            "content_type": [
                              "text/plain"
                            ]
                          },
                          "disable_on_etag_header": true
                        },
                        "compressor_library": {
                          "name": "text_optimized",
                          "typed_config": {
                            "@type": "type.googleapis.com/envoy.extensions.compression.brotli.compressor.v3.Brotli",
                            "window_bits": 10
                          }
                        }
                      }
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ]
                }
              }
            ],
            "transport_socket": {
              "name": "envoy.transport_sockets.tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "require_client_certificate": true,
                "common_tls_context": {
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "inline_string": "-----BEGIN CERTIFICATE-----\nBLA BLA\n-----END CERTIFICATE-----\n"
                      },
                      "private_key": {
                        "inline_string": "-----BEGIN PRIVATE KEY-----\nBLA BLA\n-----END PRIVATE KEY-----\n"
                      }
                    }
                  ]
                }
              }
            }
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "envoy-stats",
        "connect_timeout": "0.25s",
        "type": "STATIC",
        "load_assignment": {
          "cluster_name": "envoy-stats",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 9901
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      },
      {
        "name": "service",
        "connect_timeout": "0.25s",
        "type": "STRICT_DNS",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "service",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "service",
                        "port_value": 8080
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      }
    ]
  },
  "admin": {
    "address": {
      "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9901
      }
    }
  }
}
