gadgets_scanners/exposure/tests/data/envoy/req.sw.envoy.tls.downstream.verify-client/not_applicable/envoy.json.approval.json
{
    "Answer": false,
    "Verdict": "require_client_certificate=false was not detected",
    "Evidence": []
}
